--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.11
 
 WORKDIR /app
 
-COPY requirements.txt .
+COPY src/requirements.txt .
 COPY . .
 
 RUN pip install --no-cache-dir -r requirements.txt
