--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,12 +2,12 @@ FROM python:3.11
 
 WORKDIR /app
 
-COPY src/requirements.txt .
+COPY requirements.txt .
 COPY . .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
 
-WORKDIR /app/src
+#WORKDIR /app/src
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
