--- a/src/alembic.ini
+++ b/src/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-# sqlalchemy.url = driver://user:pass@localhost/dbname
+# sqlalchemy.url = postgresql://neondb_owner:npg_CgwVzi2aP1mI@ep-divine-heart-a26yjwjs-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require
 sqlalchemy.url = placeholder://will_be_overridden
 
 
